--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model List<string>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Simple Notes App v1</h1>
+
+<form method="post" action="/Home/Add">
+    <input type="text" name="note" required />
+    <button type="submit">Add</button>
+</form>
+
+<ul>
+@for (int i = 0; i < Model.Count; i++)
+{
+    <li>
+        @Model[i]
+        <a href="/Home/Delete/@i">Delete</a>
+    </li>
+}
+</ul>
