updated ui in feature branch

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<string>
 
-<h1>Simple Notes App v3 - CI test</h1>
+<h1>Simple Notes App - feature branch</h1>
 
 <form method="post" action="/Home/Add">
     <input type="text" name="note" required />
